<resources>

    <!-- General app strings -->
    <string name="app_name">Miyah</string>
    <string name="title_activity_maps">Map</string>

    <!-- Login, Signup and Logout strings -->
    <string name="emailHint">E-mail</string>
    <string name="phoneHint">Phone Number</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="nameHint">Name</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="Logout">Logout</string>
    <string name="editProfile">Edit Profile</string>

    <!-- Bar fragment strings -->


    <!-- About and Manual fragment strings -->
    <string name="manual_text">You must set up a microcontroller NodeMCU ESP8266-12E with Ultrasonic Sensor HC-SR04 coded in Arduino for the client page to work properly with your account. The code for the Arduino has already been provided.</string>
    <string name="about_text1">This application was developed natively in Kotlin as part of the graduation project "Smart Water Level Detecting System" for the College of Computer and Information Sciences in the Al-Imam Muhammad Ibn Saud Islamic University.</string>
    <string name="about_text2">Developers: \n Mohammed Almekhlafi \n Sattam Alhamidy \n Abdulrahman Albalood</string>


    <!-- Notification strings -->
    <string name="notification_title">Water At Critical Levels</string>
    <string name="notification_text">Your tank is running low on water!</string>
    <string name="water_tank_notification_channel_id" translatable="false">water_tank_channel</string>
    <string name="water_tank_notification_channel_name" translatable="true">Water Tank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>